// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Snapshots matches snapshot for dark theme 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  padding: 0.5rem;
  background-color: hsla(214,13%,20%,1);
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  font-weight: 600;
  color: hsla(270,100%,98%,1);
  background-color: hsla(272,72%,47%,1);
  border: 1px solid hsla(274,66%,32%,0.4);
}

.c2:hover {
  background-color: hsla(273,67%,39%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,25%,1);
}

.c5:hover {
  background-color: hsla(0,0%,15%,0.2);
  border: 1px solid hsla(0,0%,64%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: hsla(0,0%,64%,1);
  background-color: transparent;
  border: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c4 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(215,25%,27%,1);
  cursor: block;
}

<div>
  <div
    class="c0"
    data-tui-name="MenuWrapper"
  >
    <div
      data-testid="menu-btn"
      data-tui-name="MenuTrigger"
      style="cursor: pointer;"
    >
      Menu
    </div>
    <menu
      class="c1"
      data-tui-name="Menu"
      role="menu"
    >
      <li
        class="c2"
        data-testid="home-item"
        data-tui-name="MenuItem"
        role="menuitem"
      >
        <i
          class="c3"
        >
          <i>
            icon
          </i>
        </i>
        Home
      </li>
      <hr
        class="c4"
        data-tui-name="MenuItemSeparator"
      />
      <li
        class="c5"
        data-testid="logout-item"
        data-tui-name="MenuItem"
        role="menuitem"
      >
        Logout
      </li>
      <li
        class="c6"
        data-testid="disabled-item"
        data-tui-name="MenuItem"
        disabled=""
        role="menuitem"
      >
        Disabled Item
      </li>
    </menu>
  </div>
</div>
`;

exports[`Menu Snapshots matches snapshot for light theme 1`] = `
.c0 {
  position: relative;
  display: inline-block;
}

.c1 {
  position: absolute;
  z-index: 1000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2px;
  padding: 0.5rem;
  background-color: hsla(0,100%,100%,1);
  border-radius: 0.5rem;
  box-shadow: rgb(255,255,255) 0px 0px 0px 0px,rgba(15,23,42,0.05) 0px 0px 0px 1px,rgba(0,0,0,0.1) 0px 20px 25px -5px,rgba(0,0,0,0.1) 0px 8px 10px -6px;
  -webkit-animation: ikRgWa 0.15s ease-out forwards;
  animation: ikRgWa 0.15s ease-out forwards;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  top: 100%;
  margin-top: 0.5rem;
  left: 0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
  font-weight: 600;
  color: hsla(270,100%,98%,1);
  background-color: hsla(272,72%,47%,1);
  border: 1px solid hsla(274,66%,32%,0.4);
  box-shadow: 0px 1px 0px hsla(269,100%,95%,1);
}

.c2:hover {
  background-color: hsla(273,67%,39%,1);
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
  color: hsla(0,0%,9%,1);
  border: 1px solid hsla(0,0%,64%,1);
}

.c5:hover {
  background-color: hsla(0,0%,96%,1);
  border: 1px solid hsla(0,0%,9%,1);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  border-radius: 0.5rem;
  color: hsla(0,0%,15%,1);
  background-color: transparent;
  border: none;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.5em;
}

.c4 {
  height: 1px;
  margin: 0.5rem 0;
  background-color: hsla(213,27%,84%,1);
  cursor: block;
}

<div>
  <div
    class="c0"
    data-tui-name="MenuWrapper"
  >
    <div
      data-testid="menu-btn"
      data-tui-name="MenuTrigger"
      style="cursor: pointer;"
    >
      Menu
    </div>
    <menu
      class="c1"
      data-tui-name="Menu"
      role="menu"
    >
      <li
        class="c2"
        data-testid="home-item"
        data-tui-name="MenuItem"
        role="menuitem"
      >
        <i
          class="c3"
        >
          <i>
            icon
          </i>
        </i>
        Home
      </li>
      <hr
        class="c4"
        data-tui-name="MenuItemSeparator"
      />
      <li
        class="c5"
        data-testid="logout-item"
        data-tui-name="MenuItem"
        role="menuitem"
      >
        Logout
      </li>
      <li
        class="c6"
        data-testid="disabled-item"
        data-tui-name="MenuItem"
        disabled=""
        role="menuitem"
      >
        Disabled Item
      </li>
    </menu>
  </div>
</div>
`;
